# django-observable-models

./: README.md  pyproject.toml
observable_models/: apps.py  models.py
tests/: test_django_observable_models.py
