[tool.poetry]
name = "django-observable-models"
version = "0.1.0"
description = ""
authors = ["Jayden Windle <jaydenwindle@gmail.com>"]
readme = "README.md"
packages = [
    { include = "observable_models" },
]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0"
rx = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
